# ankebot

./: .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: publish.yml
